2008-01-16  Jim Evins  <evins@snaught.com>

	* src/print.c: (print_label):
		Bug #1872568.  Don't apply special transforms (rotate and
		mirror) to clipping region or outline.

2008-01-01  Jim Evins  <evins@snaught.com>

	* src/util.c:
		Sort font lists alphabetically.

2008-01-01  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
		Do a case-insensitive sort.

2008-01-01  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c:
		Sort evolution by "file_under" field.  Original patch provided
		by Peter Cherriman <glabels-devel2712@bubieyehyeh.me.uk> in
		Patch #1860423.
	* AUTHORS:
		Added acknowledgement for above patch.

2008-01-01  Jim Evins  <evins@snaught.com>

	* NEWS:
	* configure.in:
	* glabels.spec.in:
		Reconcile with 2.2 branch.
	

2007-12-21  Jim Evins  <evins@snaught.com>

	* COPYING.LIBGLABELS:
	* COPYING.README_FIRST:
	* README:
		Updating license information to make more complete and understandable.

2007-12-16  Jim Evins  <evins@snaught.com>

	* configure.in:
		Updated version to 2.pre2.
	* help/C/glabels.xml:
		Updated documentation.
	* src/ui-commands.c: (gl_ui_cmd_help_about):
		Updated copyright string.

2007-12-15  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Removed any GtkTable that contained a GtkComboBox because the size of
		the combo box was not constrained properly.  This sacrifices the nice
		orderly labels for combo boxes that don't extend beyond the edge of the
		window.

2007-12-15  Jim Evins  <evins@snaught.com>

	* libglabels/db.c: (lgl_db_lookup_template_from_name):
	* src/object-editor.c: (gl_object_editor_finalize):
	* src/wdgt-media-select.c: (gl_wdgt_media_select_finalize):
		Fixed several small memory leaks.

2007-12-14  Jim Evins  <evins@snaught.com>

	* libglabels/db.c:
		Optimize template search by name by using a GHashTable.
	* src/mini-preview-pixbuf-cache.c:
	* src/mini-preview-pixbuf-cache.h:
		Store one pixbuf per template, but use a key for each alias.
	* src/wdgt-media-select.c: